=======
HISTORY
=======

1.1rc11 (Unreleased)
--------------------

1.1rc10 (2010-03-09)
--------------------

- Upgrade to TinyMCE 3.2.7.
  [robgietema]

- Fixed fullscreen mode, ticket #10080.
  [robgietema]

- Fixed search with Virtual Hosting, ticket #10308.
  [robgietema]

- Specified empty value and title attributes in searchreplace.htm.pt
  and template.htm.pt to make i18ndude happy.
  [vincentfretin]

- Added and updated languages from upstream.
  [vincentfretin]

- Updated pop-ups to match the Plone 4 style, and increased the default window
  sizes a bit to avoid scrollbars.
  [limi]

- Added content id so dialogs get the right style.
  [robgietema]

- Don't fail if kupu_library_tool is not available
  [naro]

- #155 transform can now handle anchors in resolveuid links
  (added test in transforms.txt)
  [fRiSi]

1.1rc9 (2010-02-18)
-------------------

- Removed id="region-content" from the templates, since it no longer has any function.
  See http://dev.plone.org/plone/ticket/10231 for more information.
  [limi]

- Removed the font-size styling in content.css, Plone is responsible for these styles anyway.
  [limi]

- Added ploneinlinestyles plugin so inline styles get filtered based on html
  filtering settings.
  [robgietema]

- Changed list style to use classes (merge from xhtml-strict branche).
  [robgietema]

- Added scope option to table cell dialog (merge from xhtml-strict branche).
  [robgietema]

- Correct link to parent of current item.
  [arrowman]

- Use &rarr; as breadcrubm separator instead of '-', like Plone does.
  [arrowman]

- Added missing Finnish translations.
  [pingviini]

1.1rc8 (2009-12-21)
-------------------

- Fix when editing contextuals portlets.
  #117 http://plone.org/products/tinymce/issues/117
  [sylvainb]

- Added a widget option: toolbar_width.
  [oliverroch]

- Fixed: "Normal paragraph" default style didn't reset css class.
  [oliverroch]

- Show dimensions of original image in imageupload-popup.
  [tom_gross]
